repair cutting right side on mobile devices

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Press Start 2P', cursive;
     background-color: #1d1f21;
